Fixing swagger error responses (#9)
* Adding e2e tests for GetTask & GetInstance resulting in 404 exceptions
* Makefile target for running e2e tests
