# handler/api/v1/models/error_model.go
@@ -1,68 +1,0 @@
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/validate"
-)
-
-/*ErrorModel error model
-
-swagger:model ErrorModel
-*/
-type ErrorModel struct {
-
-	/* code
-
-	Required: true
-	*/
-	Code *int32 `json:"code"`
-
-	/* message
-
-	Required: true
-	*/
-	Message *string `json:"message"`
-}
-
-// Validate validates this error model
-func (m *ErrorModel) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateCode(formats); err != nil {
-		// prop
-		res = append(res, err)
-	}
-
-	if err := m.validateMessage(formats); err != nil {
-		// prop
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ErrorModel) validateCode(formats strfmt.Registry) error {
-
-	if err := validate.Required("code", "body", m.Code); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-func (m *ErrorModel) validateMessage(formats strfmt.Registry) error {
-
-	if err := validate.Required("message", "body", m.Message); err != nil {
-		return err
-	}
-
-	return nil
-}
